--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
 			type="image/png"
 			href="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
 		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="robots" content="index,follow" />
 		<meta name="description" content="Josue Tapia" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
 		<title>JosttMe</title>
 	</head>
-	<body class="bg-primary font-Nunito font-bold">
-		<header class="grid h-screen place-content-center">
-			<h1 class="max-w-mf z-40 inline-block text-center text-3xl text-white/60 lg:text-4xl">
-				Hi, I’m Josue Tapia,
-			</h1>
-			<span class="z-40 inline-block max-w-lg text-center text-2xl text-white/60 lg:text-3xl"
-				>HTML developer Junior</span
-			>
-		</header>
-		<main>
-			<div
-				class="cursor pointer-events-none fixed z-50 hidden h-5 w-5 -translate-x-2/4 -translate-y-2/4 rounded-full bg-secondary"
-			></div>
-		</main>
-		<script type="module" src="/main.js"></script>
+	<body class="grid touch-none place-content-center bg-primary font-Nunito">
+		<h1
+			class="max-w-mf z-40 inline-block text-center text-3xl font-bold text-white/60 lg:text-4xl"
+		>
+			Hi, I’m Josue Tapia,
+		</h1>
+		<span class="z-40 inline-block max-w-lg text-center text-2xl text-white/60 lg:text-3xl"
+			>HTML developer Junior</span
+		>
+		<div class="cursor hidden"></div>
+		<script defer type="module" src="/main.js"></script>
 	</body>
 </html>
