--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
 		<title>JosttMe</title>
 	</head>
-	<body class="grid touch-none place-content-center bg-primary font-Nunito">
+	<body class="grid h-screen w-full touch-none place-content-center bg-primary font-Nunito">
+		<div class="absolute top-10 z-50 w-full text-center opacity-70 lg:pl-10 lg:text-left">
+			<img
+				width="100"
+				height="34"
+				decoding="async"
+				class="inline-block"
+				src="/josttme.png"
+				alt="jottme text"
+			/>
+			<img
+				width="40"
+				height="40"
+				decoding="async"
+				class="inline-block"
+				src="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
+				alt="JosttMe Logo"
+			/>
+		</div>
 		<h1
 			class="max-w-mf z-40 inline-block text-center text-3xl font-bold text-white/60 lg:text-4xl"
 		>
@@ -24,6 +42,58 @@
 		<span class="z-40 inline-block max-w-lg text-center text-2xl text-white/60 lg:text-3xl"
 			>HTML developer Junior</span
 		>
+		<div
+			class="lg:mt-26 mt-16 grid grid-cols-2 gap-3 justify-self-center text-center text-xl text-white/60 lg:gap-8"
+		>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/spa-api-rest-javascript/"
+				>JosttMovies</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/JosttMovi/"
+				>JosttMovi</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/music-player/"
+				>JosttMusic</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/platzi-travel-tailwind/"
+				>JosttTravel</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/lexica-art-api/"
+				>lexica</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/react-lexica-api/"
+				>lexicaReact</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/cats-random/"
+				>catsRandom</a
+			>
+			<a
+				target="_blank"
+				class="z-50 cursor-pointer underline underline-offset-2 hover:text-secondary"
+				href="https://www.jostt.me/quote-generator/"
+				>quoteGenerator</a
+			>
+		</div>
 		<div class="cursor hidden"></div>
 		<script defer type="module" src="/main.js"></script>
 	</body>
