ADD cloudinary optimizer images

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
+      href="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,h_50,q_80,w_50/v1677042772/jostt.me/images/logo/y9shy5qav0dybfxgax2v.avif"
+      block
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index,follow" />
@@ -13,8 +14,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      as="font"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
+      defer
     />
     <title>JosttMe</title>
   </head>
@@ -25,7 +32,7 @@
         height="34"
         decoding="async"
         class="inline-block"
-        src="/josttme.png"
+        src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,h_40,q_50,w_200/v1677043743/jostt.me/images/logo/josttme_xabfhk.avif"
         alt="jottme text"
       />
       <img
@@ -33,7 +40,7 @@
         height="40"
         decoding="async"
         class="inline-block"
-        src="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
+        src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,h_80,q_80,w_80/v1677042772/jostt.me/images/logo/y9shy5qav0dybfxgax2v.avif"
         alt="JosttMe Logo"
       />
     </div>
@@ -50,11 +57,11 @@
     </div>
 
     <div class="mr-auto ml-auto w-10/12 pb-10 lg:w-[1000px]">
-      <h3
+      <h2
         class="mr-auto ml-auto w-full max-w-[20rem] font-Nunito text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
       >
         Projects
-      </h3>
+      </h2>
       <div class="grid-cols-cards grid w-full gap-10 pb-5 pt-5 sm:grid-cols-card lg:w-[1000px]">
         <a
           target="_blank"
@@ -67,8 +74,10 @@
             Weather App
           </h3>
           <img
+            width="300"
+            height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/weather-app.png"
+            src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,h_552,q_20,w_552/v1677042601/jostt.me/images/projects/yrnijctloqt9zs8hf8gl.avif"
             alt=""
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -98,7 +107,7 @@
           </h3>
           <img
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/josttmovies.png"
+            src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,f_auto,h_300,w_300/v1677042601/jostt.me/images/projects/aeofdg4vlzbyspudpsfr.png"
             alt=""
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -135,7 +144,7 @@
           </h3>
           <img
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/react-lexica-api.png"
+            src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_limit,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/llbrztalre3lcfc0eauv.png"
             alt="image search engine by AI"
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -165,10 +174,10 @@
           </h3>
           <img
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/josttmovi-1.png"
+            src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/oinbjzx9eofvdfkrir6q.png"
             alt="Image Video Player JosttMovi"
           />
-          <div class="flex h-14 h-auto w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
+          <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
             <img
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
@@ -194,11 +203,13 @@
             Music Player
           </h3>
           <img
+            width="auto"
+            height="auto"
             class="ml-auto mr-auto h-full rounded-lg border-[3px] border-[#030404]/60"
-            src="/music-player.png"
+            src="https://res.cloudinary.com/dmblgxj3u/image/upload/c_fill,f_auto,h_300,q_50,w_169/v1677042601/jostt.me/images/projects/hyht0yi3te7ropzypbvd.png"
             alt="Image Video Player JosttMovi"
           />
-          <div class="flex h-14 h-auto w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
+          <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
             <img
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
