--- a/index.html
+++ b/index.html
@@ -5,70 +5,57 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
+      href="https://res.cloudinary.com/josttme/image/upload/c_fill,h_50,q_80,w_50/v1677042772/jostt.me/images/logo/y9shy5qav0dybfxgax2v.avif"
+      block
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index,follow" />
     <meta name="description" content="Josue Tapia" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
-      rel="stylesheet"
-    />
+
     <title>JosttMe</title>
   </head>
-  <body class="grid h-full w-full bg-primary font-Nunito">
-    <div class="absolute top-10 z-50 w-full text-center opacity-70 lg:pl-10 lg:text-left">
+  <body class="bg-primary font-Nunito">
+    <div
+      class="flex h-10 w-full place-content-center items-center gap-1 pt-5 text-center opacity-70 lg:justify-start lg:pl-10 lg:text-left"
+    >
       <img
         width="100"
-        height="34"
-        decoding="async"
-        class="inline-block"
-        src="/josttme.png"
-        alt="jottme text"
+        height="40"
+        src="https://res.cloudinary.com/josttme/image/upload/c_fill,h_40,q_50,w_200/v1677043743/jostt.me/images/logo/josttme_xabfhk.avif"
+        alt="JosttMe Text"
       />
       <img
         width="40"
         height="40"
-        decoding="async"
-        class="inline-block"
-        src="https://dl.dropboxusercontent.com/s/krhcb2uytgl2fow/JosttMe.png"
+        src="https://res.cloudinary.com/josttme/image/upload/c_fill,h_80,q_80,w_80/v1677042772/jostt.me/images/logo/y9shy5qav0dybfxgax2v.avif"
         alt="JosttMe Logo"
       />
     </div>
-    <div class="grid w-full place-content-center pt-44 pb-32">
-      <h1
-        class="z-40 inline-block max-w-max text-center text-3xl font-bold text-textColor/60 lg:text-4xl"
-      >
-        Hi, I’m Josue Tapia,
-      </h1>
-      <span
-        class="z-40 inline-block max-w-lg text-center text-2xl text-textColor/60 lg:text-3xl"
-        >HTML developer Junior</span
-      >
+    <div class="grid w-full place-content-center pt-44 pb-32 text-center text-textColor/60">
+      <h1 class="text-3xl lg:text-4xl">Hi, I’m Josue Tapia,</h1>
+      <span class="text-xl lg:text-[1.6rem]">HTML developer Junior</span>
     </div>
 
     <div class="mr-auto ml-auto w-10/12 pb-10 lg:w-[1000px]">
-      <h3
-        class="mr-auto ml-auto w-full max-w-[20rem] font-Nunito text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
+      <h2
+        class="mr-auto ml-auto w-full max-w-[20rem] text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
       >
         Projects
-      </h3>
+      </h2>
       <div class="grid-cols-cards grid w-full gap-10 pb-5 pt-5 sm:grid-cols-card lg:w-[1000px]">
         <a
           target="_blank"
           href="https://www.jostt.me/weather-app/"
-          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] hover:border-textColor"
+          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] lg:hover:border-textColor"
         >
-          <h3
-            class="self-center text-center font-Nunito text-2xl font-semibold text-textColor/60"
-          >
+          <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
             Weather App
           </h3>
           <img
+            width="300"
+            height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/weather-app.png"
+            src="https://res.cloudinary.com/josttme/image/upload/c_fill,h_500,q_20,w_500/v1677042601/jostt.me/images/projects/yrnijctloqt9zs8hf8gl.avif"
             alt=""
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -76,12 +63,16 @@
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
               src="/javascript.svg"
+              width="40"
+              height="40"
               alt="Logo JavaScript"
             />
             <img
               class="lit w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/lit.svg"
               title="Lit"
+              width="40"
+              height="40"
               alt="Logo Lit"
             />
           </div>
@@ -89,16 +80,16 @@
         <a
           target="_blank"
           href="https://www.jostt.me/spa-api-rest-javascript/"
-          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] hover:border-textColor"
+          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] lg:hover:border-textColor"
         >
-          <h3
-            class="self-center text-center font-Nunito text-2xl font-semibold text-textColor/60"
-          >
+          <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
             Movies
           </h3>
           <img
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/josttmovies.png"
+            width="300"
+            height="300"
+            src="https://res.cloudinary.com/josttme/image/upload/c_fill,f_auto,h_300,w_300/v1677042601/jostt.me/images/projects/aeofdg4vlzbyspudpsfr.png"
             alt=""
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -106,18 +97,24 @@
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
               src="/javascript.svg"
+              width="40"
+              height="40"
               alt="Logo JavaScript"
             />
             <img
               class="lit w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/lit.svg"
               title="Lit"
+              width="40"
+              height="40"
               alt="Logo Lit"
             />
             <img
               class="sass w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/sass.svg"
               title="Sass"
+              width="40"
+              height="40"
               alt="Logo Sass"
             />
           </div>
@@ -126,16 +123,16 @@
         <a
           target="_blank"
           href="https://www.jostt.me/react-lexica-api/"
-          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] hover:border-textColor"
+          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] lg:hover:border-textColor"
         >
-          <h3
-            class="self-center text-center font-Nunito text-2xl font-semibold text-textColor/60"
-          >
+          <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
             Image Search Engine
           </h3>
           <img
+            width="300"
+            height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/react-lexica-api.png"
+            src="https://res.cloudinary.com/josttme/image/upload/c_limit,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/llbrztalre3lcfc0eauv.png"
             alt="image search engine by AI"
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -143,12 +140,16 @@
               class="react w-8 duration-200 ease-card hover:scale-[1.07]"
               title="React"
               src="/react.svg"
+              width="40"
+              height="40"
               alt="Logo React"
             />
             <img
               class="tailwind w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/tailwind.svg"
               title="Tailwind"
+              width="40"
+              height="40"
               alt="Logo Tailwind"
             />
           </div>
@@ -156,29 +157,33 @@
         <a
           target="_blank"
           href="https://www.jostt.me/JosttMovi/"
-          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] hover:border-textColor"
+          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] lg:hover:border-textColor"
         >
-          <h3
-            class="self-center text-center font-Nunito text-2xl font-semibold text-textColor/60"
-          >
+          <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
             Video Player
           </h3>
           <img
+            width="300"
+            height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="/josttmovi-1.png"
+            src="https://res.cloudinary.com/josttme/image/upload/c_fill,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/oinbjzx9eofvdfkrir6q.png"
             alt="Image Video Player JosttMovi"
           />
-          <div class="flex h-14 h-auto w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
+          <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
             <img
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
               src="/javascript.svg"
+              width="40"
+              height="40"
               alt="Logo JavaScript"
             />
             <img
               class="tailwind w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/tailwind.svg"
               title="Tailwind"
+              width="40"
+              height="40"
               alt="Logo Tailwind"
             />
           </div>
@@ -186,35 +191,41 @@
         <a
           target="_blank"
           href="https://www.jostt.me/music-player/"
-          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer grid-cols-1 grid-rows-card place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] hover:border-textColor"
+          class="mr-auto ml-auto grid h-full w-full max-w-[20rem] cursor-pointer grid-cols-1 grid-rows-card place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.02] lg:hover:border-textColor"
         >
-          <h3
-            class="self-center text-center font-Nunito text-2xl font-semibold text-textColor/60"
-          >
+          <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
             Music Player
           </h3>
           <img
+            width="164"
+            height="288"
             class="ml-auto mr-auto h-full rounded-lg border-[3px] border-[#030404]/60"
-            src="/music-player.png"
+            src="https://res.cloudinary.com/josttme/image/upload/c_fill,f_auto,h_300,q_50,w_169/v1677042601/jostt.me/images/projects/hyht0yi3te7ropzypbvd.png"
             alt="Image Video Player JosttMovi"
           />
-          <div class="flex h-14 h-auto w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
+          <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
             <img
               class="javascript w-8 duration-200 ease-card hover:scale-[1.07]"
               title="JavaScript"
               src="/javascript.svg"
+              width="40"
+              height="40"
               alt="Logo JavaScript"
             />
             <img
               class="lit w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/lit.svg"
               title="Lit"
+              width="40"
+              height="40"
               alt="Logo Lit"
             />
             <img
               class="sass w-8 duration-200 ease-card hover:scale-[1.07]"
               src="/sass.svg"
               title="Sass"
+              width="40"
+              height="40"
               alt="Logo Sass"
             />
           </div>
@@ -222,8 +233,9 @@
       </div>
     </div>
 
-    <div class="cursor hidden"></div>
-    <span class="pt-2 pb-5 text-center text-textColor/80">&copy; 2023 JosttMe </span>
+    <div class="grid w-full place-content-center pt-2 pb-5">
+      <span class="text-textColor/50">&copy; 2023 JosttMe </span>
+    </div>
     <script defer type="module" src="/main.js"></script>
   </body>
 </html>
