--- a/index.html
+++ b/index.html
@@ -30,10 +30,67 @@
         Hi, I’m
         <span class="name bg-gradient-to-r from-[#00b7ff] to-[#ce00c0]">Josue Tapia</span>,
       </h1>
-      <span class="text-2xl lg:text-3xl">HTML developer Junior</span>
+      <span class="text-3xl lg:text-4xl">Front End JavaScript</span>
     </div>
 
     <div class="mr-auto ml-auto w-10/12 pb-10 lg:w-[1000px]">
+      <h2
+        class="mr-auto ml-auto w-full max-w-[20rem] text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
+      >
+        Skills
+      </h2>
+      <div
+        class="lg:grid-cols-lgskills mr-auto ml-auto grid max-w-[320px] grid-cols-skills place-items-center gap-2 rounded-lg bg-[#053b86] p-2 lg:max-w-[1000px] lg:pr-64 lg:pl-64"
+      >
+        <img
+          class="javascript w-8 duration-100 ease-card hover:scale-[1.07]"
+          title="JavaScript"
+          src="/javascript.svg"
+          width="50"
+          height="50"
+          alt="Logo JavaScript"
+        />
+        <img
+          class="lit w-8 duration-100 ease-card hover:scale-[1.07]"
+          src="/lit.svg"
+          title="Lit"
+          width="50"
+          height="50"
+          alt="Logo Lit"
+        />
+        <img
+          class="tailwind scale-[1.1] duration-100 ease-card hover:scale-[1.17]"
+          src="/tailwind.svg"
+          title="Tailwind"
+          width="50"
+          height="50"
+          alt="Logo Tailwind"
+        />
+        <img
+          class="sass scale-[1.2] duration-100 ease-card hover:scale-[1.27]"
+          src="/sass.svg"
+          title="Sass"
+          width="47"
+          height="47"
+          alt="Logo Sass"
+        />
+        <img
+          class="react w-9 duration-100 ease-card hover:scale-[1.07]"
+          title="React"
+          src="/react.svg"
+          width="50"
+          height="50"
+          alt="Logo React"
+        />
+        <img
+          class="github scale-[1.2] duration-100 ease-card hover:scale-[1.27]"
+          src="/github.svg"
+          title="GitHub"
+          width="37"
+          height="37"
+          alt="Logo GitHub"
+        />
+      </div>
       <h2
         class="mr-auto ml-auto w-full max-w-[20rem] text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
       >
