--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </a>
         <a
           target="_blank"
-          href="https://www.jostt.me/JosttMovi/"
+          href="https://www.jostt.me/video-player-js/"
           class="mr-auto ml-auto grid w-full max-w-[20rem] cursor-pointer grid-rows-card place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.03] lg:hover:border-textColor"
         >
           <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
@@ -222,7 +222,7 @@
             width="300"
             height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="https://res.cloudinary.com/josttme/image/upload/c_fill,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/oinbjzx9eofvdfkrir6q.png"
+            src="https://res.cloudinary.com/josttme/image/upload/v1678759421/jostt.me/images/projects/www.jostt.me_video-player-js__ppcv1v_b8yjlu.avif"
             alt="Image Video Player JosttMovi"
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -233,14 +233,6 @@
               width="40"
               height="40"
               alt="Logo JavaScript"
-            />
-            <img
-              class="tailwind scale-[1.1] duration-200 ease-card hover:scale-[1.17]"
-              src="/tailwind.svg"
-              title="Tailwind"
-              width="40"
-              height="40"
-              alt="Logo Tailwind"
             />
           </div>
         </a>
