--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Josue Tapia" />
     <title>JosttMe</title>
   </head>
-  <body class="bg-primary font-Nunito">
+  <body style="background-color: #000019; color: #95959f" class="bg-primary font-Nunito">
     <div
       class="flex h-10 w-full place-content-center items-center gap-1 pt-5 text-center opacity-70 lg:justify-start lg:pl-10 lg:text-left"
     >
@@ -35,12 +35,12 @@
 
     <div class="mr-auto ml-auto w-10/12 pb-10 lg:w-[1000px]">
       <h2
-        class="mr-auto ml-auto w-full max-w-[20rem] text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
+        class="mr-auto ml-auto mb-5 w-full max-w-[20rem] text-2xl font-semibold text-textColor/60 md:text-center lg:ml-0 lg:w-[1000px] lg:text-left"
       >
         Skills
       </h2>
       <div
-        class="lg:grid-cols-lgskills mr-auto ml-auto grid max-w-[320px] grid-cols-skills place-items-center gap-2 rounded-lg bg-[#053b86] p-2 lg:max-w-[1000px] lg:pr-64 lg:pl-64"
+        class="lg:grid-cols-lgskills mr-auto ml-auto mb-14 grid max-w-[320px] grid-cols-skills place-items-center gap-2 rounded-lg bg-[#053b86] p-2 lg:max-w-[1000px] lg:pr-64 lg:pl-64"
       >
         <img
           class="javascript w-8 duration-100 ease-card hover:scale-[1.07]"
@@ -210,7 +210,7 @@
         </a>
         <a
           target="_blank"
-          href="https://www.jostt.me/JosttMovi/"
+          href="https://www.jostt.me/video-player-js/"
           class="mr-auto ml-auto grid w-full max-w-[20rem] cursor-pointer grid-rows-card place-content-center gap-2 overflow-hidden rounded-lg border-[5px] border-transparent bg-[#06459b] p-1 duration-200 ease-card hover:scale-[1.03] lg:hover:border-textColor"
         >
           <h3 class="self-center text-center text-2xl font-semibold text-textColor/60">
@@ -220,7 +220,7 @@
             width="300"
             height="300"
             class="w-ful rounded-lg border-[3px] border-[#030404]/60"
-            src="https://res.cloudinary.com/josttme/image/upload/c_fill,f_auto,h_300,q_50,w_300/v1677042601/jostt.me/images/projects/oinbjzx9eofvdfkrir6q.png"
+            src="https://res.cloudinary.com/josttme/image/upload/v1678759421/jostt.me/images/projects/www.jostt.me_video-player-js__ppcv1v_b8yjlu.avif"
             alt="Image Video Player JosttMovi"
           />
           <div class="flex h-14 w-full gap-4 rounded-lg bg-[#060808fa] p-2 pl-3">
@@ -231,14 +231,6 @@
               width="40"
               height="40"
               alt="Logo JavaScript"
-            />
-            <img
-              class="tailwind scale-[1.1] duration-200 ease-card hover:scale-[1.17]"
-              src="/tailwind.svg"
-              title="Tailwind"
-              width="40"
-              height="40"
-              alt="Logo Tailwind"
             />
           </div>
         </a>
